--- a/src/App.css
+++ b/src/App.css
@@ -7,21 +7,21 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 25vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: grey;
 }
 
 .App-link {
@@ -35,4 +35,53 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App-title {
+  font-size: 1.5em;
+}
+
+.container {
+  border: .2em solid #D7BEA8;
+  background-color: lightgray;
+  border-radius: 5px;
+  padding: 1em;
+  width: 35%;
+  margin: auto;
+  margin-bottom: 1em;
+  display: table;
+}
+
+h6{
+  font-family: cursive;
+  font-size: 1em;
+  margin-bottom: 10px;
+}
+
+/* form {
+  display: flex;
+  padding: 1em;
+  background: #F3D9DC;
+  width: 35%;
+  margin: auto;
+  border: .2em solid #D7BEA8;
+  border-radius: 5px;
+  justify-content: center;
+  margin-bottom: 2em;
+} */
+
+input[type='submit']{
+  margin-left: 10px;
+  background: grey;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.23s;
+}
+
+
+
+
+label {
+  flex: 1;
 }
