--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,8 @@
 }
 
 .container {
-  border: .2em solid #D7BEA8;
-  background-color: lightgray;
+  border: .2em solid black;
+  background-color: white;
   border-radius: 5px;
   padding: 1em;
   width: 35%;
