--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 .App {
   text-align: center;
+  background-color: #f7f9fb;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
@@ -14,28 +15,28 @@
 } */
 
 .App-header {
-  background-color: #282c34;
+
   min-height: 25vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: grey;
+  color: #687864;
 }
 
 .App-link {
-  color: grey;
+  color: #fef9c7;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 .App-title {
   font-size: 1.5em;
