--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,15 @@ code {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.card {
+.journalcard {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
+  width: 35rem;
+  min-height: 20rem;
+  /* overflow: scroll; */
+
 
 }
 
@@ -65,4 +69,25 @@ code {
   color: #5085A5
 }
 
+.scroll {
+  max-height: 100px;
+  overflow-y: auto;
+}
 
+.scrollabletextbox {
+  height:20rem;
+  width:30rem;
+  font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
+  font-size: 82%;
+  overflow:scroll;
+}
+
+.scrollabletextbox2{
+  font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
+  font-size: 82%;
+  overflow:scroll;
+}
+
+.accordion{
+width:30rem;
+}
